# todo-mcp

./: .mcp.json  README.md  pyproject.toml  requirements.txt  tasks.json  todo_mcp_server.py
.claude/: settings.local.json
tests/: test_todo_mcp_server.py
